--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,41 +5,6 @@ a, li{
     color: white;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-    background-image: url('../assets/vRs0PSJL-wallha.com.jpg'); 
-    background-size: cover;                         
-    background-repeat: no-repeat; 
-    color: white;
-    overflow: hidden;
-}
-
-body::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('../assets/vRs0PSJL-wallha.com.jpg'); 
-    background-size: cover;
-    filter: grayscale(100%);
-    z-index: -10; 
-}
-
-body::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.452);
-    z-index: -9;
-}
-
 nav{
     display: flex;
     justify-content: space-between;
@@ -85,7 +50,7 @@ nav > ul > li > a, .desc > p{
     margin: 12% 30%;
     padding: 1.5% 3%;
     border-radius: 1rem;
-    background-color: #ED1D24BB;
+    background-color: #ED1D2477;
 }
 
 .content > h1{
@@ -101,4 +66,41 @@ nav > ul > li > a, .desc > p{
 
 .desc, .content > h1{
     text-align: center;
+}
+
+
+.list-container{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 5% 0 0 4.4%;
+    padding: 0;
+    width: 90%;
+}
+
+.list-card > a > img{
+    width: 300px;
+    height: 400px;
+    border-radius: 1rem;
+    margin-bottom: 8%;
+}
+
+.list-card{
+    width: 300px;
+    height: 492px;
+    margin: 0 1% 1% 0;
+}
+
+.list-card > a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.list-card > a > li{
+    font-size: 1.1em;
+    text-align: center;
+    width: 70%;
 }
