--- a/views/sort.ejs
+++ b/views/sort.ejs
@@ -1,7 +1,30 @@
-<%- include('partials/bodyProp_1.ejs') -%>
+<%- include('partials/bodyProp_2.ejs') -%>
 <%- include('partials/header.ejs') -%>
 
+<div class="sort-nav">
+    <form action="/sort" method="POST">
+        <select name="type" class="form-select">
+          <option value="movie">Movie</option>
+          <option value="series">Series</option>
+          <option value="episode">Episode</option>
+        </select>
+        <input type="text" name="year" placeholder="Year">
+        <button type="submit" class="form-submit">Submit</button>
+      </form>
+</div>
 
+<div class="list-container">
+    <% if(locals.movies) { %>
+        <% movies.forEach(function(movie) { %>
+                <div class="list-card">
+                    <a href="/movie">
+                        <img src="<%= movie.Poster %>">
+                        <li><%= movie.Title %></li>
+                    </a>
+                </div>
+        <% }) %>
+    <% }%>
+</div>
 
 
 <%- include('partials/footer.ejs') -%>
