--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,7 +1,37 @@
 <%- include('partials/bodyProp_1.ejs') -%>
 <%- include('partials/header.ejs') -%>
 
+<!-- Search movies -->
+
+<div class="search-container">
+  <div class="search-element">
+    <h3>Search Movie:</h3>
+    <input type = "text" class = "form-control"
+    placeholder="Search Movie Title ..." id =
+    "movie-search-box">
+
+    <div class = "search-list" id = "search-list">
+      <!-- list here -->
+      <div class = "search-list-item">
+        <div class = "search-list-item">
+          <img src = "../assets/vRs0PSJL-wallha.com.jpg">
+        </div>
+        <div class = "search-item-info">
+          <h3> Niste filme random </h3>
+          <p>2000-1000</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end of search container -->
+
+<!-- result container -->
 
 
 
+<!-- end of result container -->
+
+<!-- Movie app js -->
+ <script src="search.js"></script>
 <%- include('partials/footer.ejs') -%>
