--- a/views/search.ejs
+++ b/views/search.ejs
@@ -13,7 +13,7 @@
     <div class = "search-list" id = "search-list">
       <!-- list here -->
       <div class = "search-list-item">
-        <div class = "search-list-item">
+        <div class = "search-item-thumbnail">
           <img src = "../assets/vRs0PSJL-wallha.com.jpg">
         </div>
         <div class = "search-item-info">
@@ -21,6 +21,7 @@
           <p>2000-1000</p>
         </div>
       </div>
+
     </div>
   </div>
 </div>
@@ -28,7 +29,35 @@
 
 <!-- result container -->
 
+<div class="container">
+  <div class="result-container">
+    <div class="result-grid" id = "result-grid">
 
+      <!-- movie information here -->
+      <div class="movie-poster">
+        <img src = "../assets/vRs0PSJL-wallha.com.jpg" 
+        alt = "movie poster">
+      </div>
+      <div class="movie-info">
+        <h3 class = "movie-title"> Daca nui Shrek nui bun</h3>
+        <ul class = "movie-misc-info">
+          <li class = "year">Year:2000-1000</li>
+          <li class = "rated">Ratings: PG-13</li>
+          <li class = "released">Released: candva anu ala</li>
+        </ul>
+        <p class = "genre"><b>Genre:</b> Action, Adventure, 
+          Comedy</p>
+        <p class = "writer"><b>Writer:</b> Sun Tzu</p>
+        <p class = "actors"><b>Actors:</b> Confucius, Ting Pong Lee,
+        Tuyong Sung</p>
+        <p class = "plot"><b>Plot:</b> If fighting is certain to result in victory then you must fight. Sun Tzu said that. And I think he knows a little more about war than you do pal because he invented it. And then he perfected it so that no living man would best him on the realm of war. </p>
+        <p class = "language"><b>Language:</b> English</p>
+        <p class = "awards"><b><i class = "fas fa-award">
+        </i></b> Nominated for 1 Oscar</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- end of result container -->
 
