--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,6 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
     <title>MDB</title>
 </head>
 <body>
