--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -269,69 +269,70 @@ img {
     padding-top: 3rem;
 }
 
-.movie-title {
+.movie-title{
     font-size: 2rem;
     color: #ED1D24;
 }
 
 .movie-misc-info{
     list-style-type: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding: 1rem;
 }
-
-.movie-info .year {
+.movie-info .year{
     font-weight: 500;
 }
-
-.movie-info .rated {
+.movie-info .rated{
     background-color: #ED1D24;
     padding: 0.4rem;
     margin: 0 0.4rem;
     border-radius: 3px;
     font-weight: 600;
 }
-
-.movie-info .released {
+.movie-info .released{
     font-size: 0.9rem;
     opacity: 0.9;
 }
-
-.movie-info .writer {
+.movie-info .writer{
     padding: 0.5rem;
     margin: 1rem 0;
 }
-
-.movie-info .genre {
+.movie-info .genre{
     background-color: var(--light-dark-color);
     display: inline-block;
     padding: 0.5rem;
     border-radius: 3px;
 }
-
-.movie-info .plot {
+.movie-info .plot{
     max-width: 400px;
     margin: 1rem auto;
 }
-
-.movie-info .language {
+.movie-info .language{
     color: #ED1D24;
     font-style: italic;
 }
-
-.movie-info .awards {
+.movie-info .awards{
     font-weight: 300;
-    font-size: 1rem;
+    font-size: 0.9rem;
 }
-
-.movie-info .awards i {
+.movie-info .awards i{
     color: #ED1D24;
     margin: 1rem 0.7rem 0 0;
 }
 
-@media(max-width: 450px) {
+@media(max-width: 450px){
+    .logo p{
+        font-size: 1.4rem;
+    }
+
     .search-element .form-control{
         width: 90%;
         margin: 0 auto;
@@ -342,12 +343,23 @@ img {
         font-size: 1.4rem;
     }
 
+    .search-list{
+        width: 90%;
+        right: 50%;
+        -webkit-transform: translateX(50%);
+            -ms-transform: translateX(50%);
+                transform: translateX(50%);
+    }
+
     .search-list .search-list-item{
         width: 100%;
     }
 
-    .movie-misc-info {
-        flex-direction: column;
+    .movie-misc-info{
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
 
     .movie-misc-info li:nth-child(2){
@@ -355,16 +367,18 @@ img {
     }
 }
 
-@media(min-width:800px){
-    .search-element {
-        flex-direction: row;
+@media(min-width: 800px){
+    .search-element{
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
     }
 
     .search-element h3{
         margin-bottom: 0;
     }
-
-    .result-grid {
+    .result-grid{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
@@ -375,7 +389,9 @@ img {
     }
 
     .movie-info .movie-misc-info{
-        justify-content: flex-start;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start;
         padding-left: 0;
     }
 
