--- a/views/search.ejs
+++ b/views/search.ejs
@@ -3,16 +3,14 @@
 
 <!-- Search movies -->
 
-<div class="search-container">
-  <div class="search-element">
-    <h3>Search Movie:</h3>
-    <input type = "text" class = "form-control"
-    placeholder="Search Movie Title ..." id =
-    "movie-search-box">
+<div class = "search-container">
+  <div class = "search-element">
+      <h3>Search Movie:</h3>
+      <input type = "text" class = "form-control" placeholder="Search Movie Title ..." id = "movie-search-box" onkeyup="findMovies()" onclick = "findMovies()">
 
-    <div class = "search-list" id = "search-list">
+      <div class = "search-list" id = "search-list">
       <!-- list here -->
-      <div class = "search-list-item">
+      <!-- <div class = "search-list-item">
         <div class = "search-item-thumbnail">
           <img src = "../assets/vRs0PSJL-wallha.com.jpg">
         </div>
@@ -20,7 +18,7 @@
           <h3> Niste filme random </h3>
           <p>2000-1000</p>
         </div>
-      </div>
+      </div> -->
 
     </div>
   </div>
@@ -34,7 +32,7 @@
     <div class="result-grid" id = "result-grid">
 
       <!-- movie information here -->
-      <div class="movie-poster">
+     <!-- <div class="movie-poster">
         <img src = "../assets/vRs0PSJL-wallha.com.jpg" 
         alt = "movie poster">
       </div>
@@ -54,7 +52,7 @@
         <p class = "language"><b>Language:</b> English</p>
         <p class = "awards"><b><i class = "fas fa-award">
         </i></b> Nominated for 1 Oscar</p>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
@@ -62,5 +60,96 @@
 <!-- end of result container -->
 
 <!-- Movie app js -->
- <script src="search.js"></script>
+<script> 
+const movieSearchBox = document.getElementById('movie-search-box');
+const searchList = document.getElementById('search-list');
+const resultGrid = document.getElementById('result-grid');
+
+async function loadMovies(searchTerm){
+  const URL = `https://omdbapi.com/?s=${searchTerm}&page=1&apikey=152a4b77`;
+  const res = await fetch(`${URL}`);
+  const data = await res.json();
+  // console.log(data.Search);
+  if(data.Response == "True") displayMovieList(data.Search);
+}
+
+function findMovies(){
+  let searchTerm = (movieSearchBox.value).trim();
+  if(searchTerm.length > 0){
+      searchList.classList.remove('hide-search-list');
+      loadMovies(searchTerm);
+  } else {
+      searchList.classList.add('hide-search-list');
+  }
+}
+
+function displayMovieList(movies){
+  searchList.innerHTML = "";
+  for(let idx = 0; idx < movies.length; idx++){
+      let movieListItem = document.createElement('div');
+      movieListItem.dataset.id = movies[idx].imdbID; // setting movie id in  data-id
+      movieListItem.classList.add('search- list-item');
+      if(movies[idx].Poster != "N/A")
+          moviePoster = movies[idx].Poster;
+      else 
+          moviePoster = "image_not_found.png";
+
+      movieListItem.innerHTML = `
+      <div class = "search-item-thumbnail">
+          <img src = "${moviePoster}">
+      </div>
+      <div class = "search-item-info">
+          <h3>${movies[idx].Title}</h3>
+          <p>${movies[idx].Year}</p>
+      </div>
+      `;
+      searchList.appendChild(movieListItem);
+  }
+  loadMovieDetails();
+}
+
+function loadMovieDetails(){
+  const searchListMovies = searchList.querySelectorAll('.search-list-item');
+  searchListMovies.forEach(movie => {
+      movie.addEventListener('click', async () => {
+          // console.log(movie.dataset.id);
+          searchList.classList.add('hide-search-list');
+          movieSearchBox.value = "";
+          const result = await fetch(`http://www.omdbapi.com/?i=${movie.dataset.id}&apikey=152a4b77`);
+          const movieDetails = await result.json();
+          // console.log(movieDetails);
+          displayMovieDetails(movieDetails);
+      });
+  });
+}
+
+function displayMovieDetails(details){
+  resultGrid.innerHTML = `
+  <div class = "movie-poster">
+      <img src = "${(details.Poster != "N/A") ? details.Poster : "image_not_found.png"}" alt = "movie poster">
+  </div>
+  <div class = "movie-info">
+      <h3 class = "movie-title">${details.Title}</h3>
+      <ul class = "movie-misc-info">
+          <li class = "year">Year: ${details.Year}</li>
+          <li class = "rated">Ratings: ${details.Rated}</li>
+          <li class = "released">Released: ${details.Released}</li>
+      </ul>
+      <p class = "genre"><b>Genre:</b> ${details.Genre}</p>
+      <p class = "writer"><b>Writer:</b> ${details.Writer}</p>
+      <p class = "actors"><b>Actors: </b>${details.Actors}</p>
+      <p class = "plot"><b>Plot:</b> ${details.Plot}</p>
+      <p class = "language"><b>Language:</b> ${details.Language}</p>
+      <p class = "awards"><b><i class = "fas fa-award"></i></b> ${details.Awards}</p>
+  </div>
+  `;
+}
+
+
+window.addEventListener('click', (event) => {
+  if(event.target.className != "form-control"){
+      searchList.classList.add('hide-search-list');
+  }
+});
+</script>
 <%- include('partials/footer.ejs') -%>
