--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -255,11 +255,12 @@ img {
 
 .result-container{
     padding: 3rem 0;
+    min-height: 59.3vh;
 }
 
 .movie-poster img {
-    max-width: 300px;
-    margin: 0 auto;
+    max-width: 360px;
+    margin: 0 auto 0 25rem;
     border: 4px solid #ffff;
 }
 
@@ -403,4 +404,8 @@ img {
         padding-left: 0;
         margin-left: 0;
     }
+}
+
+.search-result-background {
+    background-color: var(--dark-color);
 }
