--- a/views/search.ejs
+++ b/views/search.ejs
@@ -143,6 +143,7 @@ function displayMovieDetails(details){
       <p class = "awards"><b><i class = "fas fa-award"></i></b> ${details.Awards}</p>
   </div>
   `;
+  resultGrid.parentElement.classList.add('search-result-background');
 }
 
 
