--- a/public/styles/body_2.css
+++ b/public/styles/body_2.css
@@ -2,6 +2,6 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;                
-    color: white;
-    background-color: rgba(0, 0, 0, 0.973);
+    color: white !important;
+    background-color: rgba(0, 0, 0, 0.973) !important;
 }
