--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -82,7 +82,7 @@ nav > ul > li > a, .desc > p{
     width: 90%;
 }
 
-.list-card > a > img{
+.list-card > img{
     width: 300px;
     height: 400px;
     border-radius: 1rem;
@@ -90,69 +90,51 @@ nav > ul > li > a, .desc > p{
 }
 
 .list-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 300px;
     height: 492px;
     margin: 0 1% 1% 0;
 }
 
-.list-card > a{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.list-card > a > li{
+.list-card > li{
     font-size: 1.1em;
     text-align: center;
     width: 70%;
 }
 
-
+.sticky{
+    position:sticky;
+    top: 115px;
+}
 
 .sort-nav > form{
+    position: absolute;
     display: flex;
     align-items: center;
+    flex-direction: column;
     justify-content: space-between;
-    width: 31%;
+    width: 3.5%;
+    height: 10rem;
     padding: 1.2% 2%;
     background-color: #00000077;
     border-radius: 1rem;
+    margin-left: 1%;
+    overflow-y: scroll;
+    scrollbar-width: none;
 }
 
-.sort-nav{
-    display: flex;
-    justify-content: flex-end;
-    margin: 0 10%;
-}
+
 
 .sort-nav > form > *{
     cursor: pointer;
     background-color: transparent;
     font-size: 1.2em;
     color: white;
+    padding: 0;
+    margin: 3% 0;
     border: none;
-}
-
-.sort-nav > form > input{
-    transition: .5s;
-    border: #ed1d2434 1px solid;
-}
-
-input::placeholder{
-    color: white;
-}
-
-input[type="text"]:focus{
-    transition: .5s;
-    border: #ED1D24 1px solid;
-}
-
-select:focus, input[type="text"]:focus{
-    outline: none;
-}
-
-.sort-nav > form > select > option{
-    color: #ed1d24;
 }
 
 :root{
