--- a/views/sort.ejs
+++ b/views/sort.ejs
@@ -1,30 +1,33 @@
 <%- include('partials/bodyProp_2.ejs') -%>
 <%- include('partials/header.ejs') -%>
 
-<div class="sort-nav">
-    <form action="/sort" method="POST">
-        <select name="type" class="form-select">
-          <option value="movie">Movie</option>
-          <option value="series">Series</option>
-          <option value="episode">Episode</option>
-        </select>
-        <input type="text" name="year" placeholder="Year">
-        <button type="submit" class="form-submit">Submit</button>
-      </form>
+<div class="sticky">
+    <div class="sort-nav">
+        <form id="yearForm" action="/sort" method="POST">
+            <input type="hidden" id="selectedYear" name="year">
+            <ul>
+                <% for (let year = 2024; year >= 1990; year--) { %>
+                    <li><a href="#" onclick="submitYear('<%= year %>')"><%= year %></a></li>
+                <% } %>
+            </ul>
+        </form>
+    </div>
 </div>
-
 <div class="list-container">
     <% if(locals.movies) { %>
         <% movies.forEach(function(movie) { %>
                 <div class="list-card">
-                    <a href="/movie">
-                        <img src="<%= movie.Poster %>">
-                        <li><%= movie.Title %></li>
-                    </a>
+                    <img src="<%= movie.Poster %>">
+                    <li><%= movie.Title %></li>
                 </div>
         <% }) %>
     <% }%>
 </div>
 
-
+<script>
+    function submitYear(year) {
+        document.getElementById('selectedYear').value = year;
+        document.getElementById('yearForm').submit();
+    }
+</script>
 <%- include('partials/footer.ejs') -%>
